--- a/first_test/src/dune
+++ b/first_test/src/dune
@@ -1,3 +1,3 @@
 (library
- (public_name baguette_sharp)
- (libraries fmt str))
+ (name baguette_sharp)
+ (libraries fmt str baguette_base baguette_functions))
