--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,3 @@
 (test
  (name test)
- (libraries baguette_base baguette_functions baguette_sharp baguette_compiler fmt))
+ (libraries baguette_base baguette_functions baguette_sharp fmt))
