--- a/src/main/dune
+++ b/src/main/dune
@@ -1,5 +1,5 @@
 (executable
- (modes byte exe)
+ (modes exe)
  (name baguette_sharp_interpreter)
  (public_name baguette_sharp_interpreter)
  (libraries baguette_base baguette_functions baguette_sharp fmt str linenoise))
