--- a/baguette_sharp.opam
+++ b/baguette_sharp.opam
@@ -2,6 +2,7 @@ opam-version: "2.0.0"
 maintainer: "contact@nwa2coco.fr"
 authors: ["Charlotte Thomas"]
 license: "MIT"
+version: "2.0.0"
 build: [
   ["dune" "build" "--only" "baguette-sharp" "--root" "." "-j" jobs "@install"]
 ]
