--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,6 @@
+(include_subdirs unqualified)
+
 (library
  (name baguette_sharp)
  (public_name baguette_sharp)
- (libraries fmt str baguette_base baguette_functions))
+ (libraries fmt str))
