--- a/src/website/dune
+++ b/src/website/dune
@@ -3,5 +3,5 @@
 (executable
  (name website_interpreter)
  (modes js)
- (libraries baguette_base baguette_functions baguette_sharp fmt str js_of_ocaml)
+ (libraries baguette_sharp fmt str js_of_ocaml)
   (preprocess (pps js_of_ocaml-ppx)))
