--- a/src/main/dune
+++ b/src/main/dune
@@ -2,5 +2,5 @@
 (executable
  (modes exe)
  (name baguette_sharp_interpreter)
- (package baguette_sharp)
+ (public_name baguette_sharp.repl)
  (libraries baguette_sharp fmt str linenoise))
