--- a/src/codegen/dune
+++ b/src/codegen/dune
@@ -1,9 +1,12 @@
 (include_subdirs no)
-  (executable
-     (modes exe)
-     (name codegen)
-     (public_name baguette_sharp.compiler)
-     (libraries baguette_sharp fmt str linenoise))
+
+(executable
+ (modes exe)
+ (name codegen)
+ (public_name baguette_sharp.compiler)
+ (libraries baguette_sharp fmt str linenoise))
+
 (env
-  (dev
-    (flags (:standard -w -32-39-38))))
+ (dev
+  (flags
+   (:standard -w -32-39-38))))
