--- a/baguette_sharp.opam
+++ b/baguette_sharp.opam
@@ -14,6 +14,7 @@ depends: [
   "dune" {>= "3.0"}
   "ocaml" {>="4.13.1"}
   "fmt" {>="0.7.0"}
+  "linenoise" {>="1.4.0"}
   "odoc" {with-doc}
 ]
 build: [
